--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +19,7 @@
         .hero {
             height: 100vh;
             width: 100vw;
-            background: url('celestiajuno_hero_upscaled.png') no-repeat center center;
+            background: url('backsoon.webp') no-repeat center center;
             background-size: cover;
         }
     </style>
